# graft

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  db_helpers.sh  deny.toml  docker-compose.yml  graft_demo3.db  graft_demo4_streaming.db  query_chunks.rs  query_db.sh
.github/: RELEASE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
doc/: DEMO_MODERNIZATION_SUMMARY.md  ERROR_PERSISTENCE_TESTS_SUMMARY.md  SQLITE_CHECKPOINTER_ENHANCEMENTS.md  error_design.md  guide_for_idleness.md  iteration1_demo.md  iteration1_demo1.md  langgraph_port_plan.md  run_demo1_explained.md  run_demo2_explained.md  semantic_chunking_plan.md
doc/archive/: demo0.rs  run_demo2_explained.md
examples/: advanced_patterns.rs  basic_nodes.rs  cap_demo.rs  demo1.rs  demo2.rs  demo3.rs  demo4.rs  errors_pretty.rs
graft/: Cargo.toml
graft/examples/: advanced_patterns.rs  basic_nodes.rs  demo2.rs  demo3.rs  errors_pretty.rs
graft/src/: lib.rs  main.rs  run_demo5.rs  testing.rs  types.rs
graft/src/reducers/: add_errors.rs  mod.rs
graft/src/runtimes/: checkpointer.rs  checkpointer_sqlite.rs  error_persistence_tests.rs  mod.rs  persistence.rs  runner.rs  runtime_config.rs
graft/src/schedulers/: scheduler.rs  tests.rs
graft/src/utils/: clock.rs  collections.rs  json_ext.rs  message_id_helpers.rs  mod.rs
migrations/: 0001_init.sql
rag_utils/: Cargo.toml
rag_utils/examples/: query_chunks.rs  query_db.sh  rust_book_pipeline.rs
rag_utils/src/: lib.rs
rag_utils/src/ingestion/: mod.rs  rust_book.rs
rag_utils/src/semantic_chunking/: assembly.rs  cache.rs  embeddings.rs  json.rs  segmenter.rs  service.rs  tests.rs  types.rs
rag_utils/src/semantic_chunking/html/: mod.rs  preprocess.rs
rag_utils/src/stores/: mod.rs  sqlite.rs
src/: app.rs  demo.rs  event_bus.rs  graph.rs  lib.rs  main.rs  message.rs  node.rs  reducer.rs  run_demo1.rs  run_demo2.rs  run_demo3.rs  run_demo4.rs  run_demo5.rs  state.rs  state_snapshot.rs  test_error_persistence.rs  types.rs
src/channels/: errors.rs  errors_channel.rs  extras.rs  messages.rs  mod.rs  tests.rs
src/event_bus/: bus.rs  mod.rs  tests.rs
src/rag/: mod.rs
src/rag/ingest/: rust_book.rs
src/rag/store/: sqlite.rs
src/reducers/: add_errors.rs  add_messages.rs  append_vec.rs  map_merge.rs  mod.rs  reducer_registery.rs  reducer_registry.rs  tests.rs
src/runtimes/: checkpointer.rs  checkpointer_sqlite.rs  checkpointer_sqlite_helpers.rs  error_persistence_tests.rs  mod.rs  persistence.rs  runner.rs  runtime_config.rs  types.rs
src/schedulers/: mod.rs  scheduler.rs  tests.rs
src/semantic_chunking/: assembly.rs  cache.rs  config.rs  json.rs  segmenter.rs  service.rs  tests.rs
src/semantic_chunking/html/: mod.rs  preprocess.rs
src/telemetry/: mod.rs
src/utils/: clock.rs  collections.rs  deterministic_rng.rs  id_generator.rs  json_ext.rs  mod.rs  testing.rs  type_guards.rs
weavegraph/: .env.example  Cargo.toml
weavegraph/examples/: advanced_patterns.rs  demo1.rs  demo2.rs  demo4.rs  errors_pretty.rs
weavegraph/migrations/: 0001_init.sql
weavegraph/src/: app.rs  graph.rs  lib.rs  main.rs  message.rs  run_demo2.rs  run_demo3.rs  run_demo5.rs  test_error_persistence.rs  types.rs
weavegraph/src/channels/: errors_channel.rs  tests.rs
weavegraph/src/event_bus/: event.rs  sink.rs
weavegraph/src/reducers/: map_merge.rs  mod.rs  tests.rs
weavegraph/src/runtimes/: checkpointer.rs  checkpointer_sqlite.rs  checkpointer_sqlite_helpers.rs  mod.rs  runtime_config.rs  types.rs
weavegraph/src/schedulers/: mod.rs  tests.rs
weavegraph/src/utils/: collections.rs  deterministic_rng.rs  id_generator.rs  json_ext.rs  merge_inspector.rs  mod.rs
weavegraph/tests/semantic_chunking/html/: example_article.html  example_table.html
weavegraph/tests/semantic_chunking/json/: example_metrics.json  example_nested.json
