[workspace]
members = [
    "graft",
    "rag_utils"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Idleness76/graft"
homepage = "https://github.com/Idleness76/graft"
documentation = "https://docs.rs/graft"
keywords = ["graph", "workflow", "concurrency", "agents", "tracing"]
categories = ["concurrency", "data-structures", "algorithms"]
rust-version = "1.83"
