[package]
name = "rag_utils"
version = "0.1.0"
edition = "2021"
description = "Semantic chunking and retrieval utilities for Graft demos."
license = "MIT"
repository = "https://github.com/Idleness76/weavegraph"
homepage = "https://github.com/Idleness76/weavegraph"
documentation = "https://docs.rs/weavegraph"
keywords = ["graph","workflow","concurrency","agents","tracing"]
categories = ["concurrency","data-structures","algorithms"]
rust-version = "1.83"
readme = "../README.md"

[dependencies]
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "rustls-tls"] }
url = "2"
rig-core = { version = "0.21", features = ["derive"] }
rig-sqlite = "0.1.23"
tokio-rusqlite = { version = "0.6", features = ["bundled"] }
sqlite-vec = "0.1"
once_cell = "1.19"
regex = "1"
scraper = "0.24"
unicode-segmentation = "1.11"
uuid = { version = "1", features = ["v4", "serde"] }
segtok = { version = "0.1.5", optional = true }
tiktoken-rs = { version = "0.7", optional = true }
rust-bert = { version = "0.23", default-features = false, optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
httpmock = "0.7"
tempfile = "3"

[features]
default = ["semantic-chunking-tiktoken"]
semantic-chunking-tiktoken = ["tiktoken-rs"]
semantic-chunking-rust-bert = ["rust-bert"]
semantic-chunking-segtok = ["segtok"]

[lib]
path = "src/lib.rs"
